# serializing-state

./: .gitattributes  README.md
precode/: CMakeLists.txt
precode/src/: http_server.cpp  json_loader.h  logger.h  ticker.h
precode/src/application_model/: game_server.cpp  game_server.h  model_app.cpp
precode/src/domain_model/: collision_detector.cpp  collision_detector.h  model_env.cpp  model_game.h
precode/src/http_handler/: api_handler.cpp  request_handler.h
precode/tests/: loot_generator_tests.cpp
solution/: CMakeLists.txt  Dockerfile
solution/src/: command_line.h  http_server.h  json_loader.cpp  json_loader.h  main.cpp
solution/src/application_model/: game.cpp  game.h  game_server.cpp  game_server.h  model_app.cpp  model_app.h  player_tokens.h
solution/src/domain_model/: collision_detector.h  geom.h  loot.h  model_env.cpp  model_env.h  model_game.cpp  model_game.h
solution/src/http_handler/: api_handler.cpp  api_handler.h  request_handler.cpp
solution/src/serialization/: model_serialization.cpp  model_serialization.h
solution/tests/: model_serialization.cpp
